Changed working with vehicle location and fixed sql script